--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "The server side for the zuno app",
+  "type": "module",
+  "description": "The server side for the Zuno app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "Flávio Zanoni",
   "license": "ISC",
